--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "next telemetry disable",
-    "export": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.0.0",
